Closed Bug 257219 Opened 21 years ago Closed 21 years ago

nsFormHistory leaks one mork factory

Categories

(Toolkit :: Form Manager, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: dbaron, Assigned: dbaron)

Details

(Keywords: fixed-aviary1.0, memory-leak, Whiteboard: [patch])

Attachments

(1 file)

nsFormHistory leaks one mork factory. Its global variable could be a member variable because it's a service, which makes the leak easier to fix.
Severity: normal → minor
Status: NEW → ASSIGNED
Whiteboard: [patch]
Attachment #157242 - Flags: superreview?(bryner)
Attachment #157242 - Flags: review?(bryner)
Attachment #157242 - Flags: superreview?(bryner)
Attachment #157242 - Flags: superreview+
Attachment #157242 - Flags: review?(bryner)
Attachment #157242 - Flags: review+
Fix checked in to trunk, 2004-09-01 17:44 -0700.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment on attachment 157242 [details] [diff] [review] patch a=asa for branch checkin.
Attachment #157242 - Flags: approval-aviary? → approval-aviary+
Fix checked in to AVIARY_1_0_20040515_BRANCH, 2004-09-14 13:42 -0700.
Keywords: fixed-aviary1.0
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: