Fix leak of mork factory.  b=257219  r+sr=bryner